--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-rc.1",
     "babel-runtime": "^6.26.0",
+    "dateformat": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
