--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "pg": "^7.4.1",
     "routing-controllers": "^0.7.7",
     "ts-node": "^5.0.1",
-    "typeorm": "0.1.19",
+    "typeorm": "^0.2.8",
     "typescript": "^2.7.2"
   }
 }
